<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/logo" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="70"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewWelcome"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/linearlayoutemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewWelcome"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_email" />
                    </LinearLayout>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="85"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorDivider"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayoutpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearlayoutemail"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_lock" />
                    </LinearLayout>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="85"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorDivider"></EditText>
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_below="@+id/linearlayoutpassword"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"

                    />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rippleForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buttonLogin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textViewForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Forgot your password?"
                        android:textColor="@color/colorText"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <LinearLayout
                    android:id="@+id/linearlayoutOr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rippleForgotPassword"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="Or Login With"
                        android:textColor="@color/colorText" />

                    <View
                        android:layout_width="20dp"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayoutSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearlayoutOr"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center">


                        <android.support.v7.widget.AppCompatButton
                            android:layout_width="160dp"
                            android:layout_height="60dp"
                            android:backgroundTint="@color/com_facebook_blue"
                            android:drawableLeft="@drawable/ic_facebook"
                            android:drawablePadding="6dp"
                            android:gravity="left|center_vertical"
                            android:padding="12dp"
                            android:text="@string/facebook"
                            android:textAllCaps="false"
                            android:textColor="@color/colorText"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center">


                        <android.support.v7.widget.AppCompatButton
                            android:layout_width="160dp"
                            android:layout_height="60dp"
                            android:backgroundTint="@color/twitter"
                            android:drawableLeft="@drawable/ic_twitter"
                            android:drawablePadding="6dp"
                            android:gravity="left|center_vertical"
                            android:padding="12dp"
                            android:text="@string/twitter"
                            android:textAllCaps="false"
                            android:textColor="@color/colorText"
                            android:textSize="22sp" />

                    </LinearLayout>
                </LinearLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rippleRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearlayoutSocial"
                    android:layout_centerHorizontal="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewRegistration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_detail"
                            android:textColor="@color/colorText" />

                        <View
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorText" />
                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
